# mach1_simulation

./: CMakeLists.txt  LICENSE  README.md  package.xml
config/: controller.yaml
launch/launch/: controller.launch  display.launch  gazebo.launch
meshes/: back_left_wheel_link_1.stl  back_right_wheel_link_1.stl  base_link.stl  camera_link_1.stl  camera_servo_link_1.stl  front_left_wheel_link_1.stl  front_right_wheel_link_1.stl  led_servo_link_1.stl  left_axel_link_1.stl  left_led_bulb_link_1.stl  left_motor_link_1.stl  lidar_link_1.stl  right_axel_link_1.stl  right_led_bulb_link_1.stl  right_motor_link_1.stl  servo_connection_link_1.stl
rviz/: urdf.rviz
urdf/: mach1.gazebo  mach1.trans  mach1.xacro  materials.xacro
