<?xml version="1.0"?>
<package format="2">
  <name>mach1_simulation</name>
  <version>1.0.0</version>
<description>The mach1_simulation package</description>

  <maintainer email="julianrendon514@gmail.com">Julian Rendon</maintainer>
  <license>MIT</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_export_depend>rospy</build_export_depend>
  <exec_depend>rospy</exec_depend>

</package>
